--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,46 +17,31 @@ environment:
   sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
-  google_fonts:
+  carousel_pro: ^1.0.0
+  cloud_firestore: null
+  cupertino_icons: ^0.1.2
   firebase_auth: ^0.15.5+2
   firebase_storage: ^3.1.3
-  provider: ^4.0.4
-  cloud_firestore:
-  tflite: ^1.0.5
-  image_picker:
-  rounded_floating_app_bar: ^0.1.0
-  font_awesome_flutter: ^8.5.0
-  carousel_pro: ^1.0.0
-  flutter_email_sender: ^3.0.1
-
   flutter:
     sdk: flutter
-  http:
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  
-
-
-
-
+  flutter_email_sender: ^5.0.2
+  font_awesome_flutter: ^8.5.0
+  google_fonts: null
+  http: null
+  image_picker: null
+  provider: ^4.0.4
+  rounded_floating_app_bar: ^0.1.0
+  tflite: ^1.0.5
 
 dev_dependencies:
+  connectivity_widget: ^0.1.5
+  curved_navigation_bar: ^0.1.26
   flutter_test:
     sdk: flutter
-  curved_navigation_bar: ^0.1.26
-  connectivity_widget: ^0.1.5
   shared_preferences: ^0.5.7+1
-  
-
-
-
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -69,8 +54,6 @@ flutter:
   assets:
     - assets/
     - assets/images/
-    
-
 
   fonts:
     - family: Crimson Text
@@ -86,7 +69,6 @@ flutter:
     - family: CM Sans Serif
       fonts:
         - asset: assets/fonts/cm_sans_serif_2012.ttf
-
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
